# yahoo-finance-mcp

./: .git-blame-ignore-revs  .gitignore  Dockerfile  Dockerfile.sec-facts  README.md  README.zh.md  REFACTORING_PLAN.md  fly.sec-facts.toml  main.py  pyproject.toml  replit  server.py  tool_catalog.json  tool_groups.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-sec-facts-sidecar.yml  deploy-worker.yml  ir-source-discovery.yml  news-quality-audit.yml  reconciliation.yml
docs/: live-smoke-policy.md  provider-runtime-guidance.md  runtime-warnings.md  sec-facts-provider.md  sec-facts-sidecar.md  thai-sec-fund-phase2.md  tool-naming.md
scripts/: audit_arsenal_news.py  check_tool_sync.py  deployed_canaries.json  discover_ir_page_candidates.py  ir_page_scope.json  list_prs.py  live_smoke_utils.py  public_tool_contract.py  stamp_worker_build.py  test_arsenal_news_audit.py  test_cache_layer.py  test_data_quality.py  test_deployed_canaries.py  test_deployed_discovery.py  test_deployed_extractors.py  test_deployed_phase3_extractors.py  test_deployed_sec_facts_provider.py  test_deployed_sec_facts_sidecar.py  test_earnings_tools.py  test_edgar_html_parse.py  test_geographic_revenue_schema.py  test_grouped_registry.py  test_helpers.py  test_input_validation.py  test_ir_page_registry.py  test_live_discovery.py  test_manifest_diagnostics.py  test_mcp_envelope.py  test_news_events.py  test_options_failure_envelope.py  test_options_quality.py  test_phase1.py  test_phase3.py  test_phase3_extractors.py  test_phase4.py  test_phase5.py  test_phase6b.py  test_phase8.py  test_pr2_data_quality.py  test_public_tool_contract.py  (+22 more)
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: cache.ts  company-ir-page-registry.json  index.ts  mcp.ts  news-source-capabilities.json  response.ts  sec-thailand.ts  tool-catalog.ts  tools.ts  validate.ts  (+1 more)
yfmcp/: __init__.py  app.py  cache.py  envelope.py  schemas.py  sec_facts_sidecar.py  util.py  validation.py
(+9 files in other folders)
