[project]
name = "yahoo-finance-mcp"
version = "0.2.0"
description = "MCP server implementation for yahoo finance integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "yfinance>=1.4.1",
]

[tool.setuptools.packages.find]
include = ["yfmcp*"]
exclude = ["assets*", "worker*", "scripts*", "docs*"]

